--- a/templates/admin.html
+++ b/templates/admin.html
@@ -56,7 +56,7 @@
      <span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;Treneri&nbsp;<span class="caret"></span></a>
     <ul class="dropdown-menu">
      <li><a href="/reception/tren/"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> &nbsp;Aizvietot vienai nodarbībai</a></li>
-     <li><a href="#"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> &nbsp;Aizvietot sākot no konrēta datuma</a></li>
+     <li><a href="/reception/tren_aizv/"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> &nbsp;Aizvietot sākot no konrēta datuma</a></li>
      <li><a href="/reception/treneri/"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;Labot treneru kartiņu</a></li>
     </ul>
   </li>
