--- a/grafiks/templates/tren_aizv_plan.html
+++ b/grafiks/templates/tren_aizv_plan.html
@@ -19,10 +19,6 @@ $(document).ready(function(){
 // clickable row
 var days = ['Pirmdiena', 'Otrdiena', 'Trešdiena', 'Ceturtdiena', 'Piektdiena', 'Sestdiena', 'Svētdiena']
 jQuery(document).ready(function($) {
-
-{% if date_error1 %}$("#DateError1").modal('show');{% endif %}
-{% if date_error2 %}$("#DateError2").modal('show');{% endif %}
-
  $(".clickable-row").click(function(e) {
 // open modal
   $("#Planotajs").modal('show');
@@ -35,9 +31,9 @@ jQuery(document).ready(function($) {
   document.getElementById('7').innerHTML = "Vietu skaits: <b>" + $(this).children('td')[7].innerHTML + "</b>"; // 7 vietas
   document.getElementById('8').innerHTML = "Nodarbība notiek no <b>" + $(this).children('td')[8].innerHTML + "</b> līdz <b>" + $(this).children('td')[9].innerHTML + "</b> datumiem";
 // fill Form
-  document.getElementById('date').value=$(this).children('td')[9].innerHTML;
+  document.getElementById('date').value=$(this).children('td')[8].innerHTML;
   document.getElementById('p_id').value=$(this).children('td')[0].innerHTML;
-  document.getElementById('laiks').value=$(this).children('td')[2].innerHTML;
+  document.getElementById('treneris').value=$(this).children('td')[6].innerHTML;
   document.getElementById('diena').value=$(this).children('td')[1].innerHTML;
  });
 });
@@ -65,47 +61,36 @@ function startTimer(duration, display) {
 
 {% block content %}
 
-<!-- DateError1 Modal START -->
-<div class="modal fade" id="DateError1" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog modal-lg"><div class="modal-content">
-<div class="modal-header">
- <h3 style="margin-top:5px; margin-bottom:5px;"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>&nbsp;&nbsp;Kļūda!</h3>
+{% if date_error %}
+<div class="alert alert-danger">
+  <center><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+  <strong> Izvēlētais sākuma datums ir ārpus pierakstu sistēmas robežām, izmaiņas netika veiktas!</strong></center>
 </div>
-<div class="modal-body">
- <h4>Izvēlētais Datums ir jau pagājis, Izmaiņas netika veiktas!</h4>
-</div>
-<div class="modal-footer">
- <button type="button" class="btn btn-default" data-dismiss="modal">Aizvērt</button>
-</form>
-</div></div></div></div>
-<!-- DateError1 Modal END -->
+{% endif %}
 
-<!-- DateError2 Modal START -->
-<div class="modal fade" id="DateError2" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog modal-lg"><div class="modal-content">
-<div class="modal-header">
- <h3 style="margin-top:5px; margin-bottom:5px;"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>&nbsp;&nbsp;Kļūda!</h3>
+{% if end_date_error %}
+<div class="alert alert-danger">
+  <center><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+  <strong> Izvēlētais beigu datums ir jau pagājis, izmaiņas netika veiktas!</strong></center>
 </div>
-<div class="modal-body">
- <h4>Izvēlētais Datums ievadīts nekorektā formātā, Izmaiņas netika veiktas!</h4>
-</div>
-<div class="modal-footer">
- <button type="button" class="btn btn-default" data-dismiss="modal">Aizvērt</button>
-</form>
-</div></div></div></div>
-<!-- DateError2 Modal END -->
-
-
+{% endif %}
 
 <!-- Planotajs Modal START -->
 <div class="modal fade" id="Planotajs" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog modal-lg"><div class="modal-content">
 <div class="modal-header">
- <h3 style="margin-top:5px; margin-bottom:5px;"><span class="glyphicon glyphicon-check" aria-hidden="true"></span>&nbsp;&nbsp;Izņemt nodarbību no plānotāja</h3>
+ <h3 style="margin-top:5px; margin-bottom:5px;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>&nbsp;&nbsp;Aizvietot Treneri sākot no konkrēta datuma</h3>
 </div>
 <div class="modal-body">
-<form action="/reception/plan/" method="post">{% csrf_token %}
+<form action="/reception/tren_aizv/" method="post">{% csrf_token %}
  <input type="hidden" id="p_id" name="p_id">
  <input type="hidden" id="diena" name="diena">
  <input type="hidden" id="laiks" name="laiks">
  <h2 id="4"></h2> <!-- nodarbiba treneris -->
+ <div class="fieldWrapper">
+  <label for="{{ form.treneris.id_for_label }}">Aizvietot ar treneri:</label>
+  {{ form.treneris }}
+  {{ form.treneris.errors }}
+ </div>
  <h4 id="1"></h4> <!-- diena -->
  <h4 id="2"></h4> <!-- laiks -->
  <h4 id="3"></h4> <!-- ilgums -->
@@ -145,8 +130,7 @@ function startTimer(duration, display) {
 <tr style="background-color: rgba(210,130,240, 0.7) !important;"><td colspan="8"><center><b><p style="margin-bottom: 0px;"></p></b></center></td></tr>
 
 {% for d in dat %}
-{% if d.end_date < max_date %}<tr class="danger" class="clickable-row">
-<!-- <td><button type="button" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#Plan{{ d.id }}">Izņemt no Plānotāja</button></td> -->
+{% if d.end_date < max_date %}<tr class="danger clickable-row" class="clickable-row">
 {% else %}<tr class="clickable-row">{% endif %}
  <td style="display:none;">{{ d.id }}</td>
  <td style="display:none;">{{ d.diena }}</td>
