--- a/grafiks/templates/tren_list.html
+++ b/grafiks/templates/tren_list.html
@@ -17,6 +17,16 @@ $("#browse").click(function(){
     $(this).parent().find("input").click();
 });
 
+// IMAGE EDIT BUTTON
+//$("#edit_browse").click(function(){
+//    $(this).parent().find("input").click(function(){
+//  alert("hello!")});
+//});
+
+$("#edit_browse").click(function(){
+    $(this).parent().find("input").click();
+});
+
 {% if add_error %}$("#Treneris_create").modal('show');{% endif %}
 
   $(".clickable-row").click(function(e) {
@@ -81,8 +91,19 @@ function startTimer(duration, display, mod) {
  <form action="/reception/treneri/" method=POST enctype="multipart/form-data">{% csrf_token %}
   <input type="hidden" id="t_id" name="t_id">
   <input type="hidden" id="t_slug" name="t_slug">
-  <img id="avatar" style="width: 150px; height: 150px;">
-  {{ avatar_form.avatar }}
+  <table class="table">
+   <tbody style="broder: none;">
+    <tr>
+     <td><img id="avatar" src="#" style="width: 150px; height: 150px;"/></td>
+     <td>
+      <div>
+       <button type="button" class="btn btn-success pull-right" id="edit_browse" style="margin-top: 5px;">Pievienot/Nomainīt Attēlu</button>
+       <input id="id_avatar" type="file" name="avatar" style="display: none" onchange="readURL(this, 'avatar');"/>
+      </div>
+     </td>
+    </tr>
+   </tbody>
+  </table>
   <table class="table table-condensed">
    <thead><tr><th style="width:30%;">Vārds:</th><th>Apraksts:</th></tr></thead>
    <tbody><tr>
@@ -156,8 +177,6 @@ function startTimer(duration, display, mod) {
 .table.table-condensed tr th { border-bottom: 1px solid #f00; }
 .table.table-condensed tr td { border-bottom: 1px solid #f00; }
 </style>
-
-<h3>BILDE: {{ print }}</h3>
 
 <div class="container">
  <button type="button" class="btn btn-success pull-right" style="margin-bottom: 5px;" data-toggle="modal" data-target="#Treneris_create">
