--- a/pieraksts/templates/select.html
+++ b/pieraksts/templates/select.html
@@ -8,7 +8,7 @@
 
 {% for gra in grafiks %}
    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="padding-left:0px; padding-right:0px;">
-    <div id="datums"><strong>{{ gra.0.sakums|date:"d/m" }}</strong> {{ gra.0.sakums|date:"l" }}</div>
+    <div id="datums"><strong>{{ gra.0.sakums|date:"d/m" }}</strong> {% if gra.0.sakums|date:"l" == "ceturdiena" %}ceturtdiena{% else %}{{ gra.0.sakums|date:"l" }}{% endif %}</div>
 {% for g in gra %}{% if g.vietas != 0 %}    <a href="/pieraksts/{{ g.id }}/"><button class="btn btn-default" type="button" style="width:100%;">
 {% else %}    <button class="btn btn-danger disabled" type="button" style="width:100%;">{% endif %}
  {{ g.sakums|date:"H:i" }} {% if g.vietas != 0 %}<span class="badge" style="width:auto;">{{ g.vietas }}</span>{% endif %}
