--- a/templates/admin.html
+++ b/templates/admin.html
@@ -25,8 +25,11 @@
 <div class="modal fade" id="Help" tabindex="-1" role="dialog" aria-hidden="true">
 <div class="modal-dialog" style="margin-top:100px;"><div class="modal-content" data-dismiss="modal">
 <div class="modal-body">
- <center><h4 style="margin-top:5px;"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
- Jautājumi par sistēmu - Aleksandrs &nbsp;<span class="glyphicon glyphicon-phone-alt"></span> &nbsp;22458469</h4></center>
+ <center>
+  <h4 style="margin-top:5px;">Jautājumi par sistēmu - Aleksandrs</h4>
+  <h4><span class="glyphicon glyphicon-phone-alt"></span> &nbsp;22458469</h4>
+  <h4><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> &nbsp;svabis17@gmail.com</h4>
+ </center>
 </div></div></div></div>
 
 <nav class="navbar-xs navbar-default">
