--- a/pieraksts/templates/cancel.html
+++ b/pieraksts/templates/cancel.html
@@ -9,10 +9,18 @@
  <div class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-offset-1">
   <h4><span class="glyphicon glyphicon-check" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba.nodarbiba }} - {{ data.nodarbiba.sakums|date:"d/m/Y H:i" }}</h4>
  </div>
- <div class="form-group" style="margin-top: 10px;"><center>
-  <a href="/atcelts/{{ id }}/"><input class="btn btn-danger" value="Jā"></a>
-  <a href="/"><input class="btn btn-default" value="Nē"></a></center>
- </div>
+
+ <form action="/atcelts/" method="post">{% csrf_token %}
+  <input type="hidden" name="cancel_id" value="{{ id }}">
+  <div class="form-group" style="margin-top: 10px;">
+   <center>
+    <input class="btn btn-danger" value="Jā" type="submit" style="min-width: 170px; max-width: 170px;">
+    <a href="/">
+     <input class="btn btn-default" value="Nē"  style="min-width: 170px; max-width: 170px;">
+    </a>
+   </center>
+  </div>
+ </form>
 </div>
 {% endblock %}
 
