--- a/grafiks/templates/del_plan.html
+++ b/grafiks/templates/del_plan.html
@@ -43,14 +43,20 @@ jQuery(document).ready(function($) {
 });
 
 var countdown;
-function submit_changes() { clearInterval(countdown); document.querySelector('#yes').value = "Izmaiņas tiek apstiprinātas"; }
+function submit_changes() {
+ clearInterval(countdown);
+ $("#yes").prop('disabled', 'disabled');
+ document.querySelector('#yes').value = "Izmaiņas tiek apstiprinātas";
+ document.getElementById("planotajs_form").submit();
+}
 function cancel() { $("#yes").hide(); $("#ok").show(); clearInterval(countdown); }
 function apply() {
   $("#yes").show(); $("#ok").hide(); var slidetime = 14,
   display = document.querySelector('#yes'); startTimer(slidetime, display);
 }
 function startTimer(duration, display) {
-  var timer = duration, seconds = 15; countdown = setInterval( function () {
+  var timer = duration, seconds = 15;
+  countdown = setInterval( function () {
     seconds = parseInt(timer % 60, 10); // seconds = seconds < 10 ? "0" + seconds : seconds;
     display.value = "Apstiprināt izmaiņas (" + seconds + ") ?"; --timer;
     if (seconds < 1) { $("#yes").hide(); $("#ok").show(); clearInterval(countdown); }
@@ -105,7 +111,7 @@ function startTimer(duration, display) {
  <h3 style="margin-top:5px; margin-bottom:5px;"><span class="glyphicon glyphicon-check" aria-hidden="true"></span>&nbsp;&nbsp;Izņemt nodarbību no plānotāja</h3>
 </div>
 <div class="modal-body">
-<form action="/reception/plan/" method="post">{% csrf_token %}
+<form id="planotajs_form" action="/reception/plan/" method="post">{% csrf_token %}
  <input type="hidden" id="p_id" name="p_id">
  <input type="hidden" id="diena" name="diena">
  <input type="hidden" id="laiks" name="laiks">
