--- a/pieraksts/templates/cancel.html
+++ b/pieraksts/templates/cancel.html
@@ -3,13 +3,19 @@
 
 {% block content %}
 <div class="row">
+{% if disable_cancel %}
+  <h2 style="text-align:center; margin-top:5px;"><b>Nav iespējams atcelt nodarbību vēlāk kā 3 stundas pirms tās sākuma!</b></h2>
+{% else %}
   <h2 style="text-align:center; margin-top:5px;"><b>Vai tiešām vēlaties atcelt pierakstu uz:</b></h2>
+{% endif %}
 </div>
 <div class="row">
  <div class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-offset-1">
   <h4><span class="glyphicon glyphicon-check" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba.nodarbiba }} - {{ data.nodarbiba.sakums|date:"d/m/Y H:i" }}</h4>
  </div>
 
+{% if disable_cancel %}
+{% else %}
  <form action="/atcelts/" method="post">{% csrf_token %}
   <input type="hidden" name="cancel_id" value="{{ id }}">
   <div class="form-group" style="margin-top: 10px;">
@@ -21,6 +27,9 @@
    </center>
   </div>
  </form>
+{% endif %}
+
 </div>
+
 {% endblock %}
 
