--- a/pieraksts/templates/cancel.html
+++ b/pieraksts/templates/cancel.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="row">
-{% if disable_cancel %}
-  <h2 style="text-align:center; margin-top:5px;"><b>Nav iespējams atcelt nodarbību vēlāk kā 3 stundas pirms tās sākuma!</b></h2>
+{% if disable_cancel == True %}
+  <h2 style="text-align:center; margin-top:5px;"><b>Nav iespējams atcelt nodarbību vēlāk kā 2 stundas pirms tās sākuma!</b></h2>
 {% else %}
   <h2 style="text-align:center; margin-top:5px;"><b>Vai tiešām vēlaties atcelt pierakstu uz:</b></h2>
 {% endif %}
@@ -14,7 +14,7 @@
   <h4><span class="glyphicon glyphicon-check" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba.nodarbiba }} - {{ data.nodarbiba.sakums|date:"d/m/Y H:i" }}</h4>
  </div>
 
-{% if disable_cancel %}
+{% if disable_cancel == True %}
 {% else %}
  <form action="/atcelts/" method="post">{% csrf_token %}
   <input type="hidden" name="cancel_id" value="{{ id }}">
